<resources>
    <string name="brace_date_previous_month">Previous month</string>
    <string name="brace_date_next_month">Next month</string>
    <string name="brace_date_previous_year">Previous year</string>
    <string name="brace_date_next_year">Next year</string>
    <string name="brace_date_choose_month">Choose month and year</string>
    <string name="brace_date_today">Today</string>
    <string name="brace_date_clear">Clear</string>
    <string name="brace_date_selected">Selected</string>
    <string name="brace_date_current_day">Today</string>
    <string name="brace_date_open_calendar">Open calendar for %1$s</string>
    <string name="brace_date_invalid">Enter a valid date</string>
    <string name="brace_date_out_of_range">Date is unavailable</string>
    <string name="brace_date_calendar_title">Choose date</string>
    <string name="brace_time_hour_12">Hour, 12-hour</string>
    <string name="brace_time_hour_24">Hour, 24-hour</string>
    <string name="brace_time_minute">Minute</string>
    <string name="brace_time_second">Second</string>
    <string name="brace_time_millisecond">Millisecond</string>
    <string name="brace_time_period">Day period</string>
    <string name="brace_time_increase">Increase %1$s</string>
    <string name="brace_time_decrease">Decrease %1$s</string>
    <string name="brace_time_switch_period">Switch to %1$s</string>
    <string name="brace_time_open">Open time picker for %1$s</string>
    <string name="brace_time_invalid">Enter a valid time</string>
    <string name="brace_time_unavailable">Time is unavailable</string>
    <string name="brace_time_title">Choose time</string>
    <string name="brace_time_done">Done</string>
    <string name="brace_time_clear">Clear</string>
    <string name="brace_time_hour_short">Hr</string>
    <string name="brace_time_minute_short">Min</string>
    <string name="brace_time_second_short">Sec</string>
    <string name="brace_time_millisecond_short">Ms</string>
    <string name="brace_range_start">Start date</string>
    <string name="brace_range_end">End date</string>
    <string name="brace_range_in">In selected range</string>
    <string name="brace_range_today">Today</string>
    <string name="brace_range_previous_month">Previous month</string>
    <string name="brace_range_next_month">Next month</string>
    <string name="brace_range_previous_year">Previous year</string>
    <string name="brace_range_next_year">Next year</string>
    <string name="brace_range_clear">Clear range</string>
    <string name="brace_range_open">Open range calendar</string>
    <string name="brace_range_title">Choose date range</string>
    <string name="brace_range_invalid">Enter a valid date</string>
    <string name="brace_range_unavailable">Date is unavailable</string>
    <string name="brace_range_overlapping">Start date must not follow end date</string>
    <string name="brace_zone_choose">Select time zone</string>
    <string name="brace_zone_search">Search time zones</string>
    <string name="brace_zone_empty">No matching time zones</string>
    <string name="brace_zone_selected">Selected</string>
    <string name="brace_zone_local">Local time zone</string>
    <string name="brace_zone_expanded">Expanded</string>
    <string name="brace_zone_collapsed">Collapsed</string>
    <string name="brace_zone_position">%1$d of %2$d: %3$s</string>
</resources>
